homepage-rb/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  template:
    metadata:
      annotations:
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: web
    spec:
      containers:
        - name: web
          image: jutonz/homepage-rb:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /up
              port: 3000
            periodSeconds: 10
      restartPolicy: Always
